<?xml version="1.0" encoding="UTF-8"?>
<!--
  Copyright @FabioZumbi12

  This class is provided 'as-is', without any express or implied warranty. In no event will the authors be held liable for any
   damages arising from the use of this class.

  Permission is granted to anyone to use this class for any purpose, including commercial plugins, and to alter it and
  redistribute it freely, subject to the following restrictions:
  1 - The origin of this class must not be misrepresented; you must not claim that you wrote the original software. If you
  use this class in other plugins, an acknowledgment in the plugin documentation would be appreciated but is not required.
  2 - Altered source versions must be plainly marked as such, and must not be misrepresented as being the original class.
  3 - This notice may not be removed or altered from any source distribution.

  Esta classe é fornecida "como está", sem qualquer garantia expressa ou implícita. Em nenhum caso os autores serão
  responsabilizados por quaisquer danos decorrentes do uso desta classe.

  É concedida permissão a qualquer pessoa para usar esta classe para qualquer finalidade, incluindo plugins pagos, e para
  alterá-lo e redistribuí-lo livremente, sujeito às seguintes restrições:
  1 - A origem desta classe não deve ser deturpada; você não deve afirmar que escreveu a classe original. Se você usar esta
   classe em um plugin, uma confirmação de autoria na documentação do plugin será apreciada, mas não é necessária.
  2 - Versões de origem alteradas devem ser claramente marcadas como tal e não devem ser deturpadas como sendo a
  classe original.
  3 - Este aviso não pode ser removido ou alterado de qualquer distribuição de origem.
  -->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>br.net.fabiozumbi12.UltimateChat</groupId>
    <artifactId>UltimateChat</artifactId>
    <packaging>pom</packaging>
    <name>UltimateChat</name>
    <version>1.9.2</version>
    <description>Ultimate Chat is an advanced chat hooking into most used plugins to show more info on player chat.
    </description>

    <repositories>
        <repository>
            <id>nucleus-api</id>
            <url>https://repo.drnaylor.co.uk/artifactory/list/minecraft</url>
        </repository>

        <!-- Spigot repos -->
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <repository>
            <id>dmulloy2-repo</id>
            <url>https://repo.dmulloy2.net/nexus/repository/public/</url>
        </repository>

        <!-- bungee repo -->
        <repository>
            <id>bungeecord-repo</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </repository>

        <!-- JDA repo -->
        <repository>
            <id>jcenter</id>
            <name>jcenter-bintray</name>
            <url>https://jcenter.bintray.com</url>
        </repository>

        <!-- EssentialsX repo -->
        <repository>
            <id>EssentialsX-Vault</id>
            <url>https://ci.ender.zone/plugin/repository/everything/</url>
        </repository>

        <!-- Marriage repo -->
        <repository>
            <id>Marriage</id>
            <url>https://ci.lucko.me/plugin/repository/everything</url>
        </repository>

    </repositories>


    <!-- Jedis -->
    <dependencies>
        <dependency>
            <groupId>redis.clients</groupId>
            <artifactId>jedis</artifactId>
            <version>5.0.0-alpha2</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-pool2</artifactId>
            <version>2.10.0</version>
        </dependency>
    </dependencies>

    <scm>
        <connection>scm:git:git@github.com:FabioZumbi12/UltimateChat.git</connection>
        <developerConnection>scm:git:git@github.com:FabioZumbi12/UltimateChat.git</developerConnection>
        <url>https://github.com/FabioZumbi12/UltimateChat/tree/master</url>
        <tag>${project.artifactId}</tag>
    </scm>

    <!-- maven site -->
    <distributionManagement>
        <repository>
            <id>internal.repo</id>
            <name>Temporary Staging Repository</name>
            <url>file://${project.build.directory}/mvn-repo</url>
        </repository>
    </distributionManagement>

    <build>
        <finalName>${project.name}-${project.version}</finalName>
        <resources>
            <resource>
                <targetPath>.</targetPath>
                <filtering>true</filtering>
                <directory>src/main/resources/</directory>
            </resource>
        </resources>

        <plugins>

            <!-- Parse Version to plugin.yml -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>1.10</version>
                <executions>
                    <execution>
                        <id>parse-version</id>
                        <goals>
                            <goal>parse-version</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>templating-maven-plugin</artifactId>
                <version>1.0.0</version>
                <executions>
                    <execution>
                        <id>filter-src</id>
                        <goals>
                            <goal>filter-sources</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Deploy to github for maven repo -->
            <plugin>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.1</version>
                <configuration>
                    <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo
                    </altDeploymentRepository>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.github.github</groupId>
                <artifactId>site-maven-plugin</artifactId>
                <version>0.12</version>
                <configuration>
                    <noJekyll>true</noJekyll>
                    <message>Maven artifacts for ${project.artifactId} ${project.version}</message>
                    <merge>true</merge>
                    <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
                    <branch>refs/heads/mvn-repo</branch>
                    <includes>
                        <include>**/*</include>
                    </includes>
                    <repositoryName>UltimateChat</repositoryName>
                    <repositoryOwner>FabioZumbi12</repositoryOwner>
                </configuration>
                <executions>
                    <execution>
                        <id>deploying</id>
                        <goals>
                            <goal>site</goal>
                        </goals>
                        <phase>deploy</phase>
                    </execution>
                </executions>
            </plugin>

            <!-- Javadoc -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.2.0</version>
            </plugin>
        </plugins>
    </build>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <github.global.server>github-user</github.global.server>
    </properties>
    <modules>
        <module>UltimateFancy</module>
        <module>UltimateChat-JDA</module>
        <module>UltimateChat-Spigot</module>
        <module>UltimateChat-Bungee</module>
        <module>UltimateChat-Velocity</module>
    </modules>
</project>